removed margin from <summary> to prevent overflow

--- a/data_webapp/public/style.css
+++ b/data_webapp/public/style.css
@@ -84,7 +84,7 @@ details li {
 } */
 summary {
     font-weight: bold;
-    margin: -0.5em -0.5em 0;
+    /* margin: -0.5em -0.5em 0; */
     padding: 0.5em;
 }
 summary:hover {
